Phase 0 baseline: fixed Java version, replaced Lombok with explicit code, resolved compilation errors